adding css file to html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS + js clock</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="clock">
@@ -17,7 +18,7 @@
 
   <script>
     function setDate() {
-      Console.log("hi");
+      console.log("hi");
     }
     setInterval(setDate, 1000)
 
