--- a/index.html
+++ b/index.html
@@ -8,17 +8,39 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="clock">
-    <div class="clock-face">
-      <div class="hand hour-hand"></div>
-      <div class="hand min-hand"></div>
-      <div class="hand sec-hand"></div>
+  
+  <div class="content">
+    <h1>CSS + JS Clock</h1>
+    <div class="clock">
+      <div class="clock-face">
+        <div class="hand hour-hand"></div>
+        <div class="hand min-hand"></div>
+        <div class="hand sec-hand"></div>
+        <div class="point"></div>
+      </div>
     </div>
   </div>
-
   <script>
+    const secHand = document.querySelector(".sec-hand");
+    const minHand = document.querySelector(".min-hand");
+    const hourHand = document.querySelector(".hour-hand");
+    
+
     function setDate() {
-      console.log("hi");
+      const now = new Date();
+      const sec = now.getSeconds();
+      const secDegrees = ((sec / 60) * 360) + 90; 
+      secHand.style.transform = `rotate(${secDegrees}deg)`;
+
+      const min = now.getMinutes();
+      const minDegrees = ((min / 60) * 360) + 90; 
+      minHand.style.transform = `rotate(${minDegrees}deg)`;
+
+      const hour = now.getHours();
+      const hourDegrees = ((hour / 12) * 360) + 90; 
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+      console.log(secDegrees);
     }
     setInterval(setDate, 1000)
 
